fix: change unexpected input service_id to service-id

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -29,5 +29,6 @@ jobs:
       - name: Deploy to Render
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
-          service_id: ${{ secrets.RENDER_SERVICE_ID }}
+          service-id: ${{ secrets.RENDER_SERVICE_ID }}
           api-key: ${{ secrets.RENDER_API_KEY }}
+          wait-for-success: true
