chore: change to real values

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -29,5 +29,5 @@ jobs:
       - name: Deploy to Render
         uses: johnbeynon/render-deploy-action@v0.0.8
         with:
-          service-id: ${{ secrets.RENDER_SERVICE_ID }}
-          api-key: ${{ secrets.RENDER_API_KEY }}
+          service-id: https://render-prisma-project-2q90.onrender.com
+          api-key: rnd_ljpG0t9Q55AyxLMilDkTRd6fbBMb
